--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,13 @@ body {
     text-decoration: underline;
 }
 
+.box {
+    width: 300px;
+    height: 300px;
+    background-color:aqua;
+    padding: 20px 50px 40px 60px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: antiquewhite;
+    margin: 20px 50px 40px 60px
+}
