--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     background-color:rgb(242, 195, 203)
 }
@@ -10,6 +15,7 @@ body {
 }
 
 .box {
+    display: inline-block;
     width: 300px;
     height: 300px;
     background-color:aqua;
@@ -17,5 +23,5 @@ body {
     border-width: 3px;
     border-style: solid;
     border-color: antiquewhite;
-    margin: 20px 50px 40px 60px
+    margin: 20px 50px 40px 60px;
 }
